events-install-validating-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-webhook
  namespace: argo-events
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: events-webhook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-webhook
  namespace: argo-events
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-webhook
  template:
    metadata:
      labels:
        app: events-webhook
    spec:
      containers:
      - args:
        - webhook-service
        image: nekia/argo-events:v1.5.3
        imagePullPolicy: Always
        name: webhook
      serviceAccountName: argo-events-webhook-sa
