argo-wf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    #ingress.kubernetes.io/rewrite-target: /$2
    #ingress.kubernetes.io/protocol: https # Traefik
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: cicd.13.208.245.103.nip.io
      http:
        paths:
          - backend:
              service:
                name: argo-server
                port:
                  number: 2746
            path: /argo(/|$)(.*)
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-event-source
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    #ingress.kubernetes.io/rewrite-target: /$2
    #ingress.kubernetes.io/protocol: https # Traefik
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: webhook.13.208.245.103.nip.io
      http:
        paths:
          - backend:
              service:
                name: webhook-eventsource-svc
                port:
                  number: 12000
            path: /
            pathType: Prefix
